--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -688,9 +688,9 @@ Provide a music player and configure scrobbling to =libre.fm=.
 
 Get a nice interface for Emacs =calc=.
 #+begin_src emacs-lisp
-  (use-package casual
-    :ensure t
-    :bind (:map calc-mode-map ("C-o" . 'casual-calc-tmenu)))
+  (use-package casual)
+  (with-eval-after-load 'calc
+    (define-key calc-mode-map (kbd "C-o") 'casual-calc-tmenu))
 #+end_src
 
 * Languages
