--- a/macos.local/flake/system/homebrew.nix.org
+++ b/macos.local/flake/system/homebrew.nix.org
@@ -83,6 +83,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "calibre"
         "desmume"
         "discord"
+        "dolphin"
         "dwarf-fortress-lmp"
         "firefox"
         "gcc-arm-embedded"
