--- a/macos.local/flake/home/programs/emacs/core.nix.org
+++ b/macos.local/flake/home/programs/emacs/core.nix.org
@@ -7,6 +7,7 @@ Here is my Emacs configuration. This file just defines configurations that shoul
   {
     home.file = {
       "./.config/emacs/early-init.el".source = ./early-init.el;
+      "./.config/emacs/feed.el".source = ./feed.el;
       "./.config/emacs/feed.org".source = ./feed.org;
       "./.config/emacs/init.el".source = ./init.el;
     };
