--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -761,8 +761,7 @@ Configure =org-mode=. I use =~/org= as my =org= directory and hide emphasis mark
 ** Bison
 Support for =bison= and =flex=.
 #+begin_src emacs-lisp
-  (use-package bison-mode
-    :mode ("\\.lex\\'" . flex-mode))
+  (use-package bison-mode)
 #+end_src
 
 ** CMake
@@ -907,6 +906,10 @@ Set up =eglot= to run on languages that have been configured.
   (global-set-key (kbd "C-c r") 'eglot-rename)
   (use-package tree-sitter)
   (use-package tree-sitter-langs)
+  (defun enable-extras ()
+    (eglot-ensure)
+    (tree-sitter-mode 1)
+    (tree-sitter-hl-mode 1))
   (dolist (lang-hook '(sh-mode-hook
                        c-mode-hook
                        c++-mode-hook
@@ -924,8 +927,5 @@ Set up =eglot= to run on languages that have been configured.
                        yaml-mode-hook
                        nix-mode-hook
                        zig-mode-hook))
-    (add-hook lang-hook (lambda ()
-                          (eglot-ensure)
-                          (tree-sitter-mode 1)
-                          (tree-sitter-hl-mode 1))))
+    (add-hook lang-hook enable-extras))
 #+end_src
