--- a/macos.local/flake/home/programs/core.nix.org
+++ b/macos.local/flake/home/programs/core.nix.org
@@ -31,6 +31,7 @@ Import configurations for programs and install programs with no configuration.
       findutils
       fzf
       ghc
+      gnused
       gnutls
       go
       gopls
