--- a/macos.local/flake/system/core.nix.org
+++ b/macos.local/flake/system/core.nix.org
@@ -38,7 +38,7 @@ This file imports various system configuration components in addition to enablin
     nix.settings.experimental-features = "nix-command flakes";
 
     # Optimise space usage
-    # nix.settings.automatic = true;
+    nix.optimise.automatic = true;
     nix.gc = {
       automatic = true;
       options = "--delete-older-than 30d";
