--- a/macos.local/flake/home/core.nix.org
+++ b/macos.local/flake/home/core.nix.org
@@ -6,7 +6,7 @@ Set up home manager for my user account and import submodules. Define my user as
 
   {
     imports = [
-      ./clang-format.nix
+      # ./clang-format.nix
       ./fonts.nix
       ./programs/core.nix
       ./scripts/core.nix
@@ -22,8 +22,6 @@ Set up home manager for my user account and import submodules. Define my user as
       automatic = true;
       options = "--delete-older-than 30d";
     };
-
-    home.file.".wallpaper".source = ./.wallpaper;
 
     home.sessionPath = [
       "$HOME/.local/bin"
