--- a/macos.local/flake/home/programs/core.nix.org
+++ b/macos.local/flake/home/programs/core.nix.org
@@ -7,12 +7,11 @@ Import configurations for programs and install programs with no configuration.
   {
     imports = [
       ./emacs/core.nix
-      ./ghostty.nix
+      # ./ghostty.nix
       ./git.nix
       ./neovim.nix
       ./ssh.nix
       ./zsh/core.nix
     ];
-
   }
 #+end_src
