--- a/macos.local/flake/home/programs/core.nix.org
+++ b/macos.local/flake/home/programs/core.nix.org
@@ -9,7 +9,7 @@ Import configurations for programs and install programs with no configuration.
       ./emacs/core.nix
       # ./ghostty.nix
       # ./git.nix
-      ./neovim.nix
+      # ./neovim.nix
       # ./ssh.nix
       # ./zsh/core.nix
     ];
