--- a/config/emacs/early-init.el.org
+++ b/config/emacs/early-init.el.org
@@ -28,8 +28,13 @@ Clean up interface by removing unnecessary elements.
 
 Set up fonts. I use Source Code Pro (Nerd Font) for =monospace= and Computer Modern for /variable width/.
 #+begin_src emacs-lisp
-  (defvar jj/mono-font "Atkinson Hyperlegible Mono-14:weight=thin")
-  (defvar jj/var-font "Atkinson Hyperlegible Next-14")
+  (defvar jj/mono-font "Atkinson Hyperlegible Mono-10:weight=thin")
+  (defvar jj/var-font "Atkinson Hyperlegible Next-10")
+
+  (when (memq window-system '(mac ns x)
+            (setq jj/mono-font "Atkinson Hyperlegible Mono-14:weight=thin")
+            (setq jj/var-font "Atkinson Hyperlegible Next-14")))
+
   (add-to-list 'default-frame-alist
                `(font . ,jj/mono-font))
   (custom-set-faces
