--- a/config/profile.sh.org
+++ b/config/profile.sh.org
@@ -2,7 +2,7 @@
 
 Set my =PATH= variable.
 #+begin_src sh
-  export PATH="$HOME/node_modules/.bin:$HOME/bin:$HOME/gems/bin:$HOME/.local/bin:$HOME/go/bin:/usr/local/bin:/Library/TeX/texbin/:/usr/local/bin:/opt/homebrew/bin:/opt/homebrew/sbin:$PATH"
+  export PATH="$HOME/.yarn/bin:$HOME/node_modules/.bin:$HOME/bin:$HOME/gems/bin:$HOME/.local/bin:$HOME/go/bin:/usr/local/bin:/Library/TeX/texbin/:/usr/local/bin:/opt/homebrew/bin:/opt/homebrew/sbin:$PATH"
 #+end_src
 
 Set my path for man pages.
