--- a/config/emacs/early-init.el.org
+++ b/config/emacs/early-init.el.org
@@ -44,5 +44,5 @@ Set up fonts. I use Source Code Pro (Nerd Font) for =monospace= and Computer Mod
 
 Set the theme to =modus-vivendi= by default.
 #+begin_src emacs-lisp
-  (load-theme 'modus-vivendi)
+  (load-theme 'modus-operandi)
 #+end_src
