--- a/config/emacs/early-init.el.org
+++ b/config/emacs/early-init.el.org
@@ -42,8 +42,7 @@ Set up fonts. I use Source Code Pro (Nerd Font) for =monospace= and Computer Mod
    `(fixed-pitch ((t :font ,jj/mono-font))))
  #+end_src
 
-Set up theming.
+Set the theme to =modus-operandi= by default.
 #+begin_src emacs-lisp
-  (setq default-frame-alist '((undecorated . t)))
   (load-theme 'modus-operandi)
 #+end_src
