--- a/config/emacs/init.el.org
+++ b/config/emacs/init.el.org
@@ -621,6 +621,8 @@ Install a better PDF viewer than =DocView=.
     (setq TeX-view-program-selection '((output-pdf "PDF Tools"))
           TeX-view-program-list '(("PDF Tools" TeX-pdf-tools-sync-view))
           TeX-source-correlate-start-server t))
+  (when (eq system-type 'darwin)
+    (setenv "PKG_CONFIG_PATH" "/opt/homebrew/lib/pkgconfig/"))
 #+end_src
 
 Provide a snippet management system.
