--- a/config/river/init.org
+++ b/config/river/init.org
@@ -156,6 +156,8 @@
   riverctl default-layout rivertile
   rivertile -view-padding 6 -outer-padding 6 &
 
+  kdeconnectd > /tmp/kdeconnect.${USER}.log 2>&1 &
+
   # configure displays
   way-displays > /tmp/way-displays.${XDG_VTNR}.${USER}.log 2>&1 &
 #+end_src
