--- a/config/river/init.org
+++ b/config/river/init.org
@@ -157,6 +157,7 @@
   rivertile -view-padding 6 -outer-padding 6 &
 
   kdeconnectd > /tmp/kdeconnect.${USER}.log 2>&1 &
+  dunst &
 
   # configure displays
   way-displays > /tmp/way-displays.${XDG_VTNR}.${USER}.log 2>&1 &
