--- a/config/river/init.org
+++ b/config/river/init.org
@@ -1,164 +1,190 @@
 #+title: River Configuration
 
+This is literally just a shell script.
 #+begin_src sh
   #!/bin/sh
-  # Super+Shift+Return to start an instance of foot (https://codeberg.org/dnkl/foot)
+#+end_src
+
+Start a terminal with =super+return=.
+#+begin_src sh
   riverctl map normal Super+Shift Return spawn foot
+#+end_src
+
+Start an application launcher with =super+d=.
+#+begin_src sh
   riverctl map normal Super D spawn fuzzel
+#+end_src
 
-  # Super+Q to close the focused view
+Close an application with =super-q=.
+#+begin_src sh
   riverctl map normal Super Q close
+#+end_src
 
-  # Super+Shift+E to exit river
+Log out with =super+shift+e=.
+#+begin_src sh
   riverctl map normal Super+Shift E exit
+#+end_src
 
-  # Super+J and Super+K to focus the next/previous view in the layout stack
+Move to the next/previous view with =super+j/k=.
+#+begin_src sh
   riverctl map normal Super J focus-view next
   riverctl map normal Super K focus-view previous
+#+end_src
 
-  # Super+Shift+J and Super+Shift+K to swap the focused view with the next/previous
-  # view in the layout stack
+Swap positions of the current view with the next/previous with =super+shift+j/k=.
+#+begin_src sh
   riverctl map normal Super+Shift J swap next
   riverctl map normal Super+Shift K swap previous
+#+end_src
 
-  # Super+Period and Super+Comma to focus the next/previous output
+Focus on the next/previous output with =super+period/comma=.
+#+begin_src sh
   riverctl map normal Super Period focus-output next
   riverctl map normal Super Comma focus-output previous
+#+end_src
 
-  # Super+Shift+{Period,Comma} to send the focused view to the next/previous output
+Send the focused view to the next/previous output with =super+shift+period/comma=.
+#+begin_src sh
   riverctl map normal Super+Shift Period send-to-output next
   riverctl map normal Super+Shift Comma send-to-output previous
+#+end_src
 
-  # Super+Return to bump the focused view to the top of the layout stack
-  riverctl map normal Super Return zoom
+Move the focused view to the top of the layout stack with =super+shift+return=.
+#+begin_src sh
+  riverctl map normal Super+Shift Return zoom
+#+end_src
 
-  # Super+H and Super+L to decrease/increase the main ratio of rivertile(1)
+Decrease/increase the main ratio main ratio of rivertile with =super+h/l=.
+#+begin_src sh
   riverctl map normal Super H send-layout-cmd rivertile "main-ratio -0.05"
   riverctl map normal Super L send-layout-cmd rivertile "main-ratio +0.05"
+#+end_src
 
-  # Super+Shift+H and Super+Shift+L to increment/decrement the main count of rivertile(1)
+Increment/decrement the main count of rivertile with =super+shift+h/l=.
+#+begin_src sh
   riverctl map normal Super+Shift H send-layout-cmd rivertile "main-count +1"
   riverctl map normal Super+Shift L send-layout-cmd rivertile "main-count -1"
+#+end_src
 
-  # Super+Alt+{H,J,K,L} to move views
+Move a view with =super+alt+h/j/k/l=.
+#+begin_src sh
   riverctl map normal Super+Alt H move left 100
   riverctl map normal Super+Alt J move down 100
   riverctl map normal Super+Alt K move up 100
   riverctl map normal Super+Alt L move right 100
+#+end_src
 
-  # Super+Alt+Control+{H,J,K,L} to snap views to screen edges
+Snap a view with =super+alt+ctrl+h/j/k/l=.
+#+begin_src sh
   riverctl map normal Super+Alt+Control H snap left
   riverctl map normal Super+Alt+Control J snap down
   riverctl map normal Super+Alt+Control K snap up
   riverctl map normal Super+Alt+Control L snap right
+#+end_src
 
-  # Super+Alt+Shift+{H,J,K,L} to resize views
+Resize a view with =super+alt+shift+h=.
+#+begin_src sh
   riverctl map normal Super+Alt+Shift H resize horizontal -100
   riverctl map normal Super+Alt+Shift J resize vertical 100
   riverctl map normal Super+Alt+Shift K resize vertical -100
   riverctl map normal Super+Alt+Shift L resize horizontal 100
+#+end_src
 
-  # Super + Left Mouse Button to move views
+Allow mouse controls with the =super= key. Left mouse moves, right mouse resizes, and middle toggles floating mode.
+#+begin_src sh
   riverctl map-pointer normal Super BTN_LEFT move-view
-
-  # Super + Right Mouse Button to resize views
   riverctl map-pointer normal Super BTN_RIGHT resize-view
-
-  # Super + Middle Mouse Button to toggle float
   riverctl map-pointer normal Super BTN_MIDDLE toggle-float
+#+end_src
 
+Use natural scrolling on the MacBook Pro TrackPad.
+#+begin_src sh
   riverctl input pointer-1452-850-Apple_MTP_multi-touch natural-scroll disabled
+#+end_src
 
+Manage tags. =super+#= moves focus to tag =#=. =super+shift+#= changes the tag of the focused view to =#=. Adding =ctrl= to either of these toggles rather than moving.
+#+begin_src sh
   for i in $(seq 1 9)
   do
       tags=$((1 << ($i - 1)))
-
-      # Super+[1-9] to focus tag [0-8]
       riverctl map normal Super $i set-focused-tags $tags
-
-      # Super+Shift+[1-9] to tag focused view with tag [0-8]
       riverctl map normal Super+Shift $i set-view-tags $tags
-
-      # Super+Control+[1-9] to toggle focus of tag [0-8]
       riverctl map normal Super+Control $i toggle-focused-tags $tags
-
-      # Super+Shift+Control+[1-9] to toggle tag [0-8] of focused view
       riverctl map normal Super+Shift+Control $i toggle-view-tags $tags
   done
+#+end_src
 
-  # Super+0 to focus all tags
-  # Super+Shift+0 to tag focused view with all tags
+=super+0= focuses all tags and =super+shift+0= assigns the focused view to all tags.
+#+begin_src sh
   all_tags=$(((1 << 32) - 1))
   riverctl map normal Super 0 set-focused-tags $all_tags
   riverctl map normal Super+Shift 0 set-view-tags $all_tags
+#+end_src
 
-  # Super+Space to toggle float
+Toggle float mode with =super+space=.
+#+begin_src sh
   riverctl map normal Super Space toggle-float
+#+end_src
 
-  # Super+F to toggle fullscreen
+Toggle fullscreen mode with =super+f=.
+#+begin_src sh
   riverctl map normal Super F toggle-fullscreen
+#+end_src
 
-  # Super+{Up,Right,Down,Left} to change layout orientation
+Change the layout orientation with =super+up/right/down/left=.
+#+begin_src sh
   riverctl map normal Super Up    send-layout-cmd rivertile "main-location top"
   riverctl map normal Super Right send-layout-cmd rivertile "main-location right"
   riverctl map normal Super Down  send-layout-cmd rivertile "main-location bottom"
   riverctl map normal Super Left  send-layout-cmd rivertile "main-location left"
+#+end_src
 
-  # Declare a passthrough mode. This mode has only a single mapping to return to
-  # normal mode. This makes it useful for testing a nested wayland compositor
-  riverctl declare-mode passthrough
-
-  # Super+F11 to enter passthrough mode
-  riverctl map normal Super F11 enter-mode passthrough
-
-  # Super+F11 to return to normal mode
-  riverctl map passthrough Super F11 enter-mode normal
-
-  # Various media key mapping examples for both normal and locked mode which do
-  # not have a modifier
+Configure media keys.
+#+begin_src sh
   for mode in normal locked
   do
-      # Eject the optical drive (well if you still have one that is)
       riverctl map $mode None XF86Eject spawn 'eject -T'
-
-      # Control pulse audio volume with pamixer (https://github.com/cdemoulins/pamixer)
       riverctl map $mode None XF86AudioRaiseVolume  spawn 'pamixer -i 5'
       riverctl map $mode None XF86AudioLowerVolume  spawn 'pamixer -d 5'
       riverctl map $mode None XF86AudioMute         spawn 'pamixer --toggle-mute'
-
-      # Control MPRIS aware media players with playerctl (https://github.com/altdesktop/playerctl)
       riverctl map $mode None XF86AudioMedia spawn 'playerctl play-pause'
       riverctl map $mode None XF86AudioPlay  spawn 'playerctl play-pause'
       riverctl map $mode None XF86AudioPrev  spawn 'playerctl previous'
       riverctl map $mode None XF86AudioNext  spawn 'playerctl next'
-
-      # Control screen backlight brightness with brightnessctl (https://github.com/Hummer12007/brightnessctl)
       riverctl map $mode None XF86MonBrightnessUp   spawn 'brightnessctl set +5%'
       riverctl map $mode None XF86MonBrightnessDown spawn 'brightnessctl set 5%-'
   done
+#+end_src
 
-  # Set background and border color
+Configure colours.
+#+begin_src sh
   riverctl background-color 0x008080
-  riverctl border-color-focused 0x93a1a1
-  riverctl border-color-unfocused 0x586e75
+  riverctl border-color-focused 0xc3c3c3
+  riverctl border-color-unfocused 0x818181
+#+end_src
 
-  # Set keyboard repeat rate
+Set key repeat.
+#+begin_src sh
   riverctl set-repeat 50 300
+#+end_src
 
-  # Make all views with an app-id that starts with "float" and title "foo" start floating.
-  riverctl rule-add -app-id 'float*' -title 'foo' float
-
-  # Make all views with app-id "bar" and any title use client-side decorations
-  riverctl rule-add -app-id "bar" csd
-
-  # Set the default layout generator to be rivertile and start it.
-  # River will send the process group of the init executable SIGTERM on exit.
+Start river with tiling.
+#+begin_src sh
   riverctl default-layout rivertile
   rivertile -view-padding 6 -outer-padding 6 &
+#+end_src
 
+Start KDE Connect at login.
+#+begin_src sh
   kdeconnectd > /tmp/kdeconnect.${USER}.log 2>&1 &
-  dunst &
+#+end_src
 
-  # configure displays
+Start notification manager.
+#+begin_src sh
+  dunst &
+#+end_src
+
+Configure displays automatically.
+#+begin_src sh
   way-displays > /tmp/way-displays.${XDG_VTNR}.${USER}.log 2>&1 &
 #+end_src
