--- a/config/waybar/style.css.org
+++ b/config/waybar/style.css.org
@@ -42,10 +42,10 @@
   }
 
   button.focused {
-      border-right: 2px solid #fdffff;
-      border-bottom: 2px solid #fdffff;
       border-left: 2px solid #818181;
       border-top: 2px solid #818181;
+      border-right: 2px solid #fdffff;
+      border-bottom: 2px solid #fdffff;
       box-shadow: -2px -2px 0px 0px #000000;
       border-radius: 0;
       margin: 4px;
@@ -53,6 +53,8 @@
       padding-right: 10px;
       margin-top: 8px;
       margin-left: 8px;
+      margin-right: 0px;
+      margin-bottom: 0px;
   }
 
   #workspaces button {
