--- a/config/kak/kakrc.org
+++ b/config/kak/kakrc.org
@@ -4,4 +4,7 @@
   set-option global tabstop 4
   set-option global indentwidth 4
   set-option global scrolloff 1,3
+
+  eval %sh{kak-lsp}
+  lsp-enable
 #+end_src
