--- a/config/zellij/config.kdl.org
+++ b/config/zellij/config.kdl.org
@@ -171,18 +171,18 @@
       shared_except "locked" {
           bind "Ctrl g" { SwitchToMode "Locked"; }
           bind "Ctrl q" { Quit; }
-          bind "Alt F" { ToggleFloatingPanes; }
-          bind "Alt Space" { NewPane; }
-          bind "Alt I" { MoveTab "Left"; }
-          bind "Alt O" { MoveTab "Right"; }
-          bind "Alt H" "Alt Left" { MoveFocusOrTab "Left"; }
-          bind "Alt L" "Alt Right" { MoveFocusOrTab "Right"; }
-          bind "Alt J" "Alt Down" { MoveFocus "Down"; }
-          bind "Alt K" "Alt Up" { MoveFocus "Up"; }
+          bind "Alt f" { ToggleFloatingPanes; }
+          bind "Alt n" { NewPane; }
+          bind "Alt i" { MoveTab "Left"; }
+          bind "Alt o" { MoveTab "Right"; }
+          bind "Alt h" "Alt Left" { MoveFocusOrTab "Left"; }
+          bind "Alt l" "Alt Right" { MoveFocusOrTab "Right"; }
+          bind "Alt j" "Alt Down" { MoveFocus "Down"; }
+          bind "Alt k" "Alt Up" { MoveFocus "Up"; }
           bind "Alt =" "Alt +" { Resize "Increase"; }
           bind "Alt -" { Resize "Decrease"; }
-          bind "Alt 1" { PreviousSwapLayout; }
-          bind "Alt 2" { NextSwapLayout; }
+          bind "Alt [" { PreviousSwapLayout; }
+          bind "Alt ]" { NextSwapLayout; }
       }
       shared_except "normal" "locked" {
           bind "Enter" "Esc" { SwitchToMode "Normal"; }
