--- a/config/kak/kakrc.org
+++ b/config/kak/kakrc.org
@@ -5,6 +5,8 @@
   set-option global indentwidth 4
   set-option global scrolloff 1,3
 
+  add-highlighter global/ number-lines -hlcursor
+
   eval %sh{kak-lsp}
   lsp-enable
 
