--- a/config/emacs/init.el.org
+++ b/config/emacs/init.el.org
@@ -708,7 +708,7 @@ Get a nice interface for Emacs =calc=.
 
 Configure =mu4e= as an email client.
 #+begin_src emacs-lisp
-  (use-package mu4e ( :host github
+  (use-package mu4e :ensure ( :host github
               :branch "release/1.10"
               :repo "djcb/mu"
               :files ("mu4e/*.el" "build/mu4e/mu4e-meta.el" "build/mu4e/mu4e-config.el" "build/mu4e/mu4e.info")
